Styling the superfish 1 menu in the header

--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3590,7 +3590,8 @@ input.form-submit {
 
 /****** MAIN MENU ******/
 
-#block-superfish-1 {
+#block-superfish-1,
+.pane-superfish-1 {
   #superfish-1 {
     display: table;
     margin: auto;
