--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -3863,23 +3863,31 @@ input.form-submit {
   margin-top: 5px; }
 
 /****** MAIN MENU ******/
-#block-superfish-1 #superfish-1 {
+#block-superfish-1 #superfish-1,
+.pane-superfish-1 #superfish-1 {
   display: table;
   margin: auto; }
   #block-superfish-1 #superfish-1 > li:first-child,
-  #block-superfish-1 #superfish-1 > li:first-child a {
+  #block-superfish-1 #superfish-1 > li:first-child a,
+  .pane-superfish-1 #superfish-1 > li:first-child,
+  .pane-superfish-1 #superfish-1 > li:first-child a {
     border-radius: 5px 0px 0px 5px; }
   #block-superfish-1 #superfish-1 > li:last-child,
-  #block-superfish-1 #superfish-1 > li:last-child a {
+  #block-superfish-1 #superfish-1 > li:last-child a,
+  .pane-superfish-1 #superfish-1 > li:last-child,
+  .pane-superfish-1 #superfish-1 > li:last-child a {
     border-radius: 0px 5px 5px 0px; }
-  #block-superfish-1 #superfish-1 li {
+  #block-superfish-1 #superfish-1 li,
+  .pane-superfish-1 #superfish-1 li {
     border-bottom: 0;
     float: left;
     background: #eee url(images/bleeds.png) 50% 0px no-repeat;
     padding: 0; }
-    #block-superfish-1 #superfish-1 li:hover {
+    #block-superfish-1 #superfish-1 li:hover,
+    .pane-superfish-1 #superfish-1 li:hover {
       background: #f8f8f8; }
-    #block-superfish-1 #superfish-1 li a {
+    #block-superfish-1 #superfish-1 li a,
+    .pane-superfish-1 #superfish-1 li a {
       background-image: none;
       color: #333;
       text-shadow: #fff 0px 1px 0px;
@@ -3889,34 +3897,45 @@ input.form-submit {
       font-weight: bold;
       line-height: 20px;
       border: 0; }
-      #block-superfish-1 #superfish-1 li a > .sf-sub-indicator {
+      #block-superfish-1 #superfish-1 li a > .sf-sub-indicator,
+      .pane-superfish-1 #superfish-1 li a > .sf-sub-indicator {
         position: static;
         display: inline-block;
         margin-left: 0.5em; }
-      #block-superfish-1 #superfish-1 li a:hover {
+      #block-superfish-1 #superfish-1 li a:hover,
+      .pane-superfish-1 #superfish-1 li a:hover {
         background: #f8f8f8; }
-  #block-superfish-1 #superfish-1 .sf-sub-indicator {
+  #block-superfish-1 #superfish-1 .sf-sub-indicator,
+  .pane-superfish-1 #superfish-1 .sf-sub-indicator {
     -webkit-filter: invert(70%);
             filter: invert(70%); }
-  #block-superfish-1 #superfish-1 .menuparent ul {
+  #block-superfish-1 #superfish-1 .menuparent ul,
+  .pane-superfish-1 #superfish-1 .menuparent ul {
     width: auto !important;
     overflow: visible !important; }
-    #block-superfish-1 #superfish-1 .menuparent ul li {
+    #block-superfish-1 #superfish-1 .menuparent ul li,
+    .pane-superfish-1 #superfish-1 .menuparent ul li {
       white-space: nowrap !important;
       background: #ebebeb; }
-      #block-superfish-1 #superfish-1 .menuparent ul li:hover {
+      #block-superfish-1 #superfish-1 .menuparent ul li:hover,
+      .pane-superfish-1 #superfish-1 .menuparent ul li:hover {
         background: white; }
-      #block-superfish-1 #superfish-1 .menuparent ul li a {
+      #block-superfish-1 #superfish-1 .menuparent ul li a,
+      .pane-superfish-1 #superfish-1 .menuparent ul li a {
         text-align: left; }
-  #block-superfish-1 #superfish-1 .active-trail {
+  #block-superfish-1 #superfish-1 .active-trail,
+  .pane-superfish-1 #superfish-1 .active-trail {
     background-color: #7bc !important; }
-    #block-superfish-1 #superfish-1 .active-trail > a {
+    #block-superfish-1 #superfish-1 .active-trail > a,
+    .pane-superfish-1 #superfish-1 .active-trail > a {
       color: white;
       text-shadow: #38a 0px 1px 0px; }
-      #block-superfish-1 #superfish-1 .active-trail > a:hover {
+      #block-superfish-1 #superfish-1 .active-trail > a:hover,
+      .pane-superfish-1 #superfish-1 .active-trail > a:hover {
         background: inherit; }
 
-#block-superfish-1 #superfish-1-toggle {
+#block-superfish-1 #superfish-1-toggle,
+.pane-superfish-1 #superfish-1-toggle {
   display: block;
   text-align: center;
   background-color: #008db0;
@@ -3926,27 +3945,36 @@ input.form-submit {
   padding: 0.5em 1em;
   font-size: 18px;
   font-weight: bold; }
-  #block-superfish-1 #superfish-1-toggle.sf-expanded {
+  #block-superfish-1 #superfish-1-toggle.sf-expanded,
+  .pane-superfish-1 #superfish-1-toggle.sf-expanded {
     background-color: #7bc;
     border-radius: 10px 10px 0 0; }
-  #block-superfish-1 #superfish-1-toggle:hover {
+  #block-superfish-1 #superfish-1-toggle:hover,
+  .pane-superfish-1 #superfish-1-toggle:hover {
     background-color: #7bc; }
 
-#block-superfish-1 #superfish-1-accordion li {
+#block-superfish-1 #superfish-1-accordion li,
+.pane-superfish-1 #superfish-1-accordion li {
   background-color: #e9eaec;
   line-height: 1.5;
   font-size: 16px; }
-  #block-superfish-1 #superfish-1-accordion li.active-trail {
+  #block-superfish-1 #superfish-1-accordion li.active-trail,
+  .pane-superfish-1 #superfish-1-accordion li.active-trail {
     background-color: #00728e; }
-    #block-superfish-1 #superfish-1-accordion li.active-trail > a {
+    #block-superfish-1 #superfish-1-accordion li.active-trail > a,
+    .pane-superfish-1 #superfish-1-accordion li.active-trail > a {
       color: white; }
-  #block-superfish-1 #superfish-1-accordion li:last-child {
+  #block-superfish-1 #superfish-1-accordion li:last-child,
+  .pane-superfish-1 #superfish-1-accordion li:last-child {
     border-radius: 0 0 10px 10px; }
-  #block-superfish-1 #superfish-1-accordion li:hover {
+  #block-superfish-1 #superfish-1-accordion li:hover,
+  .pane-superfish-1 #superfish-1-accordion li:hover {
     background-color: #9ec5d0; }
-    #block-superfish-1 #superfish-1-accordion li:hover > a {
+    #block-superfish-1 #superfish-1-accordion li:hover > a,
+    .pane-superfish-1 #superfish-1-accordion li:hover > a {
       color: white; }
-  #block-superfish-1 #superfish-1-accordion li a {
+  #block-superfish-1 #superfish-1-accordion li a,
+  .pane-superfish-1 #superfish-1-accordion li a {
     color: #00728e; }
 
 #overlay {
