Add borders to the middle column

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1340,7 +1340,10 @@ table.views-table .pane-user-field-identification {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  margin-bottom: 0px; }
+  margin-bottom: 0px;
+  border: 1px solid #ccc;
+  padding: 1em;
+  position: relative; }
   #block-panels-mini-header .block-content {
     width: 100%; }
   #block-panels-mini-header .pane-page-site-name {
