--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2056,6 +2056,9 @@ table.views-table {
   display: flex;
   width: 100%;
   margin-bottom: 0px;
+  border: 1px solid #ccc;
+  padding: 1em;
+  position: relative;
 
   .block-content {
     width: 100%;
