--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -3980,6 +3980,24 @@ input.form-submit {
   .pane-superfish-1 #superfish-1-accordion li a {
     color: #00728e; }
 
+#mini-panel-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  #mini-panel-footer .copyright,
+  #mini-panel-footer .pane-menu-menu-footer-links {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 50%;
+            flex: 1 50%;
+    min-width: 455px; }
+
 #overlay {
   padding: 3em 40px; }
   @media (min-width: 250px) {
