--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -3994,11 +3994,14 @@ input.form-submit {
   #mini-panel-footer .copyright,
   #mini-panel-footer .pane-menu-menu-footer-links {
     -webkit-box-flex: 1;
-        -ms-flex: 1 50%;
-            flex: 1 50%; }
+        -ms-flex: 1 100%;
+            flex: 1 100%; }
     @media (min-width: 481px) {
       #mini-panel-footer .copyright,
       #mini-panel-footer .pane-menu-menu-footer-links {
+        -webkit-box-flex: 1;
+            -ms-flex: 1 50%;
+                flex: 1 50%;
         min-width: 455px; } }
 
 #overlay {
