Change breadcrumb color

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -4034,4 +4034,7 @@ input.form-submit {
 
 div#panels-ipe-control-container {
   left: 0; }
+
+.breadcrumb-link a {
+  color: #333; }
 /*# sourceMappingURL=dgr_rubik_style.css.map */
