--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3612,6 +3612,9 @@ input.form-submit {
     margin: auto;
     font-family: Georgia, "Book Antiqua", serif;
     font-style: italic;
+    justify-content: center;
+    display: flex;
+    flex-flow: row wrap;
 
     >li {
       &:first-child,
@@ -3636,7 +3639,7 @@ input.form-submit {
 
       a {
         background-image: none;
-        color: #333;
+        color: #858484;
         text-shadow: #fff 0px 1px 0px;
         min-width: 70px;
         text-align: center;
