--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -908,7 +908,7 @@ body.maintenance-page {
     padding-top: 20px;
   }
   #site-name {
-    font-size: 28px;
+    font-size: 4em;
     line-height: 1;
     font-family: Georgia, "Book Antiqua", serif;
   }
@@ -2084,6 +2084,10 @@ table.views-table {
     @include breakpoint(400px) {
       font-size: 2em;
     }
+
+    @include breakpoint(1024px) {
+      font-size: 4em;
+    }
   }
   .pane-page-slogan {
     font-size: 1em;
@@ -2097,6 +2101,10 @@ table.views-table {
 
     @include breakpoint(400px) {
       font-size: 1.5em;
+    }
+
+    @include breakpoint(1024px) {
+      font-size: 2.2em;
     }
   }
 
