Adjust link colors

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1379,10 +1379,7 @@ table.views-table .pane-user-field-identification {
     font-size: 1em;
     line-height: 1.5;
     text-align: center;
-    font-family: Georgia, "Book Antiqua", serif;
-    color: black; }
-    #block-panels-mini-header .pane-page-slogan:hover {
-      color: #1F45FC; }
+    font-family: Georgia, "Book Antiqua", serif; }
     @media (min-width: 295px) {
       #block-panels-mini-header .pane-page-slogan {
         font-size: 1.2em; } }
@@ -1392,6 +1389,10 @@ table.views-table .pane-user-field-identification {
     @media (min-width: 1024px) {
       #block-panels-mini-header .pane-page-slogan {
         font-size: 2.2em; } }
+    #block-panels-mini-header .pane-page-slogan a {
+      color: black; }
+      #block-panels-mini-header .pane-page-slogan a:hover {
+        color: #1F45FC; }
   #block-panels-mini-header .middle-column {
     -webkit-box-align: center;
         -ms-flex-align: center;
