--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2085,11 +2085,6 @@ table.views-table {
     line-height: 1.5;
     text-align: center;
     font-family: Georgia, "Book Antiqua", serif;
-    color: black;
-
-    &:hover {
-      color: #1F45FC;
-    }
 
     @include breakpoint(295px) {
       font-size: 1.8em;
@@ -2101,6 +2096,14 @@ table.views-table {
 
     @include breakpoint(1024px) {
       font-size: 4em;
+    }
+
+    a {
+      color: black;
+    
+      &:hover {
+        color: #1F45FC;
+      }
     }
   }
   .pane-page-slogan {
