--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -3974,10 +3974,11 @@ input.form-submit {
         text-align: left; }
   #block-superfish-1 #superfish-1 .active-trail,
   .pane-superfish-1 #superfish-1 .active-trail {
-    background-color: #7bc !important; }
+    background-color: none !important; }
     #block-superfish-1 #superfish-1 .active-trail > a,
     .pane-superfish-1 #superfish-1 .active-trail > a {
-      color: white;
+      color: black;
+      text-decoration: underline;
       text-shadow: #38a 0px 1px 0px; }
       #block-superfish-1 #superfish-1 .active-trail > a:hover,
       .pane-superfish-1 #superfish-1 .active-trail > a:hover {
