--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2145,7 +2145,10 @@ table.views-table {
 
   .right-column,
   .left-column {
-    flex: 0 auto;
+    flex: 1 170px;
+    border: 1px solid #ccc;
+    margin: 0 1em;
+    padding: 0;
   }
 
   .menu-name-user-menu {
