--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -117,6 +117,26 @@ div.comment, div.node {
 body.tao {
   color: black; }
 
+#branding {
+  background: none; }
+  #branding .breadcrumb-link {
+    float: none;
+    position: static;
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 5px; }
+    #branding .breadcrumb-link a {
+      color: black;
+      font-weight: normal;
+      float: left;
+      margin-right: 0;
+      padding: 0;
+      background: none; }
+  #branding .bc-separator {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 5px; }
+
 #page {
   width: 100%;
   margin: auto;
