--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -282,7 +282,7 @@ div#toolbar div.toolbar-shortcuts ul {
 
 #page-title {
   background: none;
-  
+
   .page-title {
     font-size: 2em;
     margin: 0;
@@ -2106,7 +2106,7 @@ table.views-table {
   }
 }
 
-#block-panels-mini-header {
+#block-panels-mini-header .row-one {
   display: flex;
   width: 100%;
   margin-bottom: 0px;
