--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1423,12 +1423,10 @@ table.views-table .pane-user-field-identification {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    display: block;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 100%;
+            flex: 1 100%;
     border: 1px solid #ccc;
     padding: 1em;
     position: relative; }
@@ -1443,9 +1441,7 @@ table.views-table .pane-user-field-identification {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    display: block;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center; }
