--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1423,10 +1423,12 @@ table.views-table .pane-user-field-identification {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    display: block;
-    -webkit-box-flex: 1;
-        -ms-flex: 1 100%;
-            flex: 1 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     border: 1px solid #ccc;
     padding: 1em;
     position: relative; }
@@ -1441,7 +1443,9 @@ table.views-table .pane-user-field-identification {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    display: block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center; }
