--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1433,7 +1433,7 @@ table.views-table .pane-user-field-identification {
         -ms-flex-pack: center;
             justify-content: center;
     border: 1px solid #ccc;
-    padding: 1em;
+    padding: 0.5em;
     position: relative; }
   #block-panels-mini-header .row-one .right-column,
   #block-panels-mini-header .row-one .left-column {
@@ -1442,7 +1442,7 @@ table.views-table .pane-user-field-identification {
             flex: 1 220px;
     border: 1px solid #ccc;
     margin: 0 1em;
-    padding: 1em;
+    padding: 0.5em;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -3980,6 +3980,7 @@ input.form-submit {
       text-align: center;
       padding: 5px 10px;
       font-weight: bold;
+      font-size: 1.2em;
       line-height: 20px;
       border: 0;
       -webkit-transition: color 0.4s ease 0s;
