--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -10,11 +10,14 @@ blockquote {
   display: block;
   font-style: italic;
   margin: 1em 2em;
-  quotes: '\201c' '\201d'; }
+  quotes: '\201c' '\201d';
+  background-color: lightgrey;
+  padding: 1.8em;
+  border: 1px solid dimgrey; }
   blockquote:before {
-    content: open-quote; }
+    content: none; }
   blockquote:after {
-    content: close-quote; }
+    content: none; }
 
 code {
   font-family: monospace; }
