--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -32,12 +32,15 @@ blockquote {
   font-style: italic;
   margin: 1em 2em;
   quotes: '\201c' '\201d';
+  background-color: lightgrey;
+  padding: 1.8em;
+  border: 1px solid dimgrey;
 
   &:before {
-    content: open-quote;
+    content: none;
   }
   &:after { 
-    content: close-quote;
+    content: none;
   }
 }
 code {
