--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -42,6 +42,10 @@ blockquote {
   &:after { 
     content: none;
   }
+
+  p:nth-child(n+2) {
+    padding-left: 2em;
+  }
 }
 code {
   font-family: monospace;
