Change stylesheet file name to override parent stylesheets

--- a/style.css
+++ b/style.css
@@ -4128,4 +4128,4 @@ div#panels-ipe-control-container {
 
 .breadcrumb-link a {
   color: #333; }
-/*# sourceMappingURL=dgr_rubik_style.css.map */
+/*# sourceMappingURL=style.css.map */
