--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -4128,4 +4128,4 @@ div#panels-ipe-control-container {
 
 .breadcrumb-link a {
   color: #333; }
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=dgr_rubik_style.css.map */
