--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -43,7 +43,7 @@ blockquote {
     content: none;
   }
 
-  p:nth-child(n+2) {
+  p:nth-child(n+2):not([class]) {
     padding-left: 2em;
   }
 }
@@ -183,7 +183,7 @@ body.tao {
 #main-content {
   margin: 0;
 
-  p {
+  p:not([class]) {
     font-size: 1.2em;
     margin-bottom: 1em;
     text-align: justify;
