--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -29,12 +29,14 @@ big {
 }
 blockquote {
   display: block;
+  line-height: 20px;
+  background: #f8f8f8;
+  padding: 4px 9px;
+  border: 1px solid #eee;
+  border-left: 5px solid #eee;
   font-style: italic;
   margin: 1em 2em;
   quotes: '\201c' '\201d';
-  background-color: lightgrey;
-  padding: 1.8em;
-  border: 1px solid dimgrey;
 
   &:before {
     content: none;
@@ -182,9 +184,9 @@ body.tao {
 
 #main-content {
   margin: 0;
+  font-size: 1.2em;
 
   p:not([class]) {
-    font-size: 1.2em;
     margin-bottom: 1em;
     text-align: justify;
 
