--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1397,7 +1397,8 @@ table.views-table .pane-user-field-identification {
     width: 100%; }
   #block-panels-mini-header .row-one .pane-page-site-name {
     font-size: 1.5em;
-    line-height: 1.5;
+    line-height: 1;
+    margin: 20px 0;
     text-align: center;
     font-family: Georgia, "Book Antiqua", serif; }
     @media (min-width: 295px) {
@@ -1416,7 +1417,8 @@ table.views-table .pane-user-field-identification {
         text-decoration: none; }
   #block-panels-mini-header .row-one .pane-page-slogan {
     font-size: 1em;
-    line-height: 1.5;
+    line-height: 1;
+    margin: 20px 0;
     text-align: center;
     font-family: Georgia, "Book Antiqua", serif; }
     @media (min-width: 295px) {
@@ -1432,6 +1434,20 @@ table.views-table .pane-user-field-identification {
       color: black; }
       #block-panels-mini-header .row-one .pane-page-slogan a:hover {
         color: #1F45FC; }
+  #block-panels-mini-header .row-one .pane-superfish-1 {
+    margin: 20px 0; }
+  #block-panels-mini-header .row-one .pane-uuid-c30f5d3d-002d-498d-85f4-941d6a820d28 {
+    margin-bottom: 1em; }
+  #block-panels-mini-header .row-one .pane-uuid-9eb16fb2-ba49-4f6e-8116-4766576e8283 {
+    margin-bottom: 0.5em; }
+  #block-panels-mini-header .row-one .pane-widgets-s-socialmedia-share-default {
+    text-align: center; }
+    #block-panels-mini-header .row-one .pane-widgets-s-socialmedia-share-default .widgets-element {
+      display: inline-block;
+      margin-right: 5px;
+      float: none; }
+      #block-panels-mini-header .row-one .pane-widgets-s-socialmedia-share-default .widgets-element:last-child {
+        margin-right: 0; }
   #block-panels-mini-header .row-one .middle-column {
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -3994,6 +4010,7 @@ input.form-submit {
       padding: 5px 10px;
       font-weight: bold;
       font-size: 1.2em;
+      line-height: 1;
       line-height: 20px;
       border: 0;
       -webkit-transition: color 0.4s ease 0s;
