--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3795,7 +3795,7 @@ input.form-submit {
 
       li {
         white-space: nowrap !important;
-        background: #ebebeb;
+        background: white;
 
         &:hover {
           background: white;
