Side panels styling

--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2227,12 +2227,16 @@ table.views-table {
   .right-column,
   .left-column {
     flex: 1 220px;
-    border: 1px solid #ccc;
     margin: 0 1em;
-    padding: 0.5em;
-    align-items: center;
+    align-items: flex-end;
     display: flex;
     justify-content: center;
+
+    .inner {
+      height: 140px;
+      border: 1px solid #ccc;
+      padding: 0.5em;
+    }
   }
 
   .menu-name-user-menu {
