--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1469,18 +1469,21 @@ table.views-table .pane-user-field-identification {
     -webkit-box-flex: 1;
         -ms-flex: 1 220px;
             flex: 1 220px;
-    border: 1px solid #ccc;
     margin: 0 1em;
-    padding: 0.5em;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center; }
+    #block-panels-mini-header .row-one .right-column .inner,
+    #block-panels-mini-header .row-one .left-column .inner {
+      height: 140px;
+      border: 1px solid #ccc;
+      padding: 0.5em; }
   #block-panels-mini-header .row-one .menu-name-user-menu ul li {
     margin-left: 0;
     white-space: nowrap;
