--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -99,7 +99,15 @@ ol li, ul li {
 /***********************/
 body {
   max-width: 1400px;
-  margin: auto; }
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  min-height: 100vh; }
   body a {
     color: #1F45FC;
     text-decoration: none; }
@@ -147,7 +155,10 @@ body.tao {
 #page {
   width: 100%;
   margin: auto;
-  max-width: 100%; }
+  max-width: 100%;
+  -webkit-box-flex: 100%;
+      -ms-flex: 100%;
+          flex: 100%; }
   @media (min-width: 1025px) {
     #page {
       width: 80%;
