Hide the alt text when image is not present.

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -132,6 +132,9 @@ div.comment, div.node {
 body.tao {
   color: black; }
 
+img {
+  text-indent: -9999px; }
+
 #branding {
   background: none !important; }
   #branding .breadcrumb-link {
