--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -790,14 +790,44 @@ body.maintenance-page {
     margin-bottom: 50px;
     padding-top: 20px; }
   body.maintenance-page #site-name {
-    font-size: 4em;
+    font-size: 1.5em;
     line-height: 1;
+    margin: 20px 0;
+    text-align: center;
     font-family: Georgia, "Book Antiqua", serif; }
+    @media (min-width: 295px) {
+      body.maintenance-page #site-name {
+        font-size: 1.8em; } }
+    @media (min-width: 400px) {
+      body.maintenance-page #site-name {
+        font-size: 2em; } }
+    @media (min-width: 1024px) {
+      body.maintenance-page #site-name {
+        font-size: 4em; } }
+    body.maintenance-page #site-name a {
+      color: black; }
+      body.maintenance-page #site-name a:hover {
+        color: #1F45FC;
+        text-decoration: none; }
   body.maintenance-page #site-slogan {
-    margin-top: 7px;
-    word-spacing: 0.1em;
-    font-style: italic;
+    font-size: 1em;
+    line-height: 1;
+    margin: 20px 0;
+    text-align: center;
     font-family: Georgia, "Book Antiqua", serif; }
+    @media (min-width: 295px) {
+      body.maintenance-page #site-slogan {
+        font-size: 1.2em; } }
+    @media (min-width: 400px) {
+      body.maintenance-page #site-slogan {
+        font-size: 1.5em; } }
+    @media (min-width: 1024px) {
+      body.maintenance-page #site-slogan {
+        font-size: 2.2em; } }
+    body.maintenance-page #site-slogan a {
+      color: black; }
+      body.maintenance-page #site-slogan a:hover {
+        color: #1F45FC; }
   body.maintenance-page h1#page-title {
     background: none;
     font-size: 28px;
