--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -980,15 +980,59 @@ body.maintenance-page {
     padding-top: 20px;
   }
   #site-name {
-    font-size: 4em;
+    font-size: 1.5em ;
     line-height: 1;
+    margin: 20px 0;
+    text-align: center;
     font-family: Georgia, "Book Antiqua", serif;
+
+    @include breakpoint(295px) {
+      font-size: 1.8em;
+    }
+
+    @include breakpoint(400px) {
+      font-size: 2em;
+    }
+
+    @include breakpoint(1024px) {
+      font-size: 4em;
+    }
+
+    a {
+      color: black;
+    
+      &:hover {
+        color: #1F45FC;
+        text-decoration: none;
+      }
+    }
   }
   #site-slogan {
-    margin-top: 7px;
-    word-spacing: 0.1em;
-    font-style: italic;
+    font-size: 1em;
+    line-height: 1;
+    margin: 20px 0;
+    text-align: center;
     font-family: Georgia, "Book Antiqua", serif;
+
+    @include breakpoint(295px) {
+      font-size: 1.2em;
+    }
+
+    @include breakpoint(400px) {
+      font-size: 1.5em;
+    }
+
+    @include breakpoint(1024px) {
+      font-size: 2.2em;
+    }
+
+    a {
+      color: black;
+    
+      &:hover {
+        color: #1F45FC;
+      }
+    }
   }
   h1#page-title {
     background: none;
